Partial commit for C2_MeanSlope integration --> main branch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,15 +53,15 @@ if(OPENMP_FOUND)
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
-find_package(CUDA) # FindCUDA is deprecated, future releases will use find_package(CUDAToolkit)
-if(CUDA_FOUND)
-  include(FindCUDA)
-  message("${BoldGreen}" "CUDA library status: ${ColourReset}")
-  message(STATUS "    toolkit root dir: ${CUDA_TOOLKIT_ROOT_DIR}")
-  message(STATUS "    version: ${CUDA_VERSION}")
-  message(STATUS "    libraries: ${CUDA_LIBRARIES}")
-  message(STATUS "    include path: ${CUDA_INCLUDE_DIRS}")
-endif(CUDA_FOUND)
+#find_package(CUDA) # FindCUDA is deprecated, future releases will use find_package(CUDAToolkit)
+#if(CUDA_FOUND)
+#  include(FindCUDA)
+#  message("${BoldGreen}" "CUDA library status: ${ColourReset}")
+#  message(STATUS "    toolkit root dir: ${CUDA_TOOLKIT_ROOT_DIR}")
+#  message(STATUS "    version: ${CUDA_VERSION}")
+#  message(STATUS "    libraries: ${CUDA_LIBRARIES}")
+#  message(STATUS "    include path: ${CUDA_INCLUDE_DIRS}")
+#endif(CUDA_FOUND)
 
 # Find OpenCV, you may need to set OpenCV_DIR variable
 # to the absolute path to the directory containing OpenCVConfig.cmake file
