Fix C2_MeanSlopeMap naming to match simpler canonical form

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,15 +53,38 @@ if(OPENMP_FOUND)
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
-find_package(CUDA) # FindCUDA is deprecated, future releases will use find_package(CUDAToolkit)
-if(CUDA_FOUND)
-  include(FindCUDA)
-  message("${BoldGreen}" "CUDA library status: ${ColourReset}")
-  message(STATUS "    toolkit root dir: ${CUDA_TOOLKIT_ROOT_DIR}")
-  message(STATUS "    version: ${CUDA_VERSION}")
-  message(STATUS "    libraries: ${CUDA_LIBRARIES}")
-  message(STATUS "    include path: ${CUDA_INCLUDE_DIRS}")
-endif(CUDA_FOUND)
+if (USE_CUDA)
+  message ("${BoldBlue} Asked for CUDA, searching... ${ColourReset}")
+  find_package(CUDA) # FindCUDA is deprecated, future releases will use find_package(CUDAToolkit)
+  if(CUDA_FOUND)
+    add_definitions( -DUSE_CUDA=1 )
+    include(FindCUDA)
+    message("${BoldGreen}" "CUDA library status: ${ColourReset}")
+    message(STATUS "    toolkit root dir: ${CUDA_TOOLKIT_ROOT_DIR}")
+    message(STATUS "    version: ${CUDA_VERSION}")
+    message(STATUS "    libraries: ${CUDA_LIBRARIES}")
+    message(STATUS "    include path: ${CUDA_INCLUDE_DIRS}")
+  endif(CUDA_FOUND)
+  # find_package(CUDA)
+  # if(CUDA_FOUND)
+  #   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CUDA_CXX_FLAGS}")
+  #   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${CUDA_EXE_LINKER_FLAGS}")
+  # endif()
+endif()
+
+# find_package(TBB REQUIRED tbb) 
+# # If the package has been found, several variables will be set, you can find the full list with descriptions
+# # in the OpenCVConfig.cmake file.
+# if (NOT TBB_FOUND)
+#   message (WARNING "TBB not found, disabling multithreading")
+# else()
+#   message (STATUS "TBB Found...")
+# endif()
+
+# message("${BoldGreen}" "TBB library status:" "${ColourReset}")
+# message(STATUS "    version: ${TBB_VERSION_MAJOR}.${TBB_VERSION_MINOR}")
+# message(STATUS "    libraries: ${TBB_LIBRARIES}")
+# message(STATUS "    include path: ${TBB_INCLUDE_DIRS}")
 
 # Find OpenCV, you may need to set OpenCV_DIR variable
 # to the absolute path to the directory containing OpenCVConfig.cmake file
