Remove COPY statements forunavailabe scripts in CMake config step

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -237,5 +237,5 @@ install (TARGETS land       DESTINATION $ENV{HOME}/bin)
 install (TARGETS tiff2png       DESTINATION $ENV{HOME}/bin)
 install (TARGETS tiff2rugosity  DESTINATION $ENV{HOME}/bin)
 install (TARGETS img.resample   DESTINATION $ENV{HOME}/bin)
-file(COPY scripts/tiff.convert2png.sh  DESTINATION $ENV{HOME}/bin/scripts)
-file(COPY scripts/collect_maps.sh  DESTINATION $ENV{HOME}/bin/scripts)
+#file(COPY scripts/tiff.convert2png.sh  DESTINATION $ENV{HOME}/bin/scripts)
+#file(COPY scripts/collect_maps.sh  DESTINATION $ENV{HOME}/bin/scripts)
